<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ShopDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:background="@drawable/bg_curve"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/llShop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/shopImg"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_shops"/>

            <TextView
                android:id="@+id/tvCat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/cat_name"
                android:textColor="@color/grey_text_color"
                android:textSize="16sp" />


            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="22dp"
                android:text="@string/shop_name"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@android:color/darker_gray" />


            <TextView
                android:id="@+id/tvAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="240dp"
                android:text="@string/address"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_distance"
                android:drawablePadding="10dp"
                android:drawableTint="@color/blue"
                android:textColor="@color/grey_text_color"/>


            <TextView
                android:id="@+id/tvCBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cashback"
                android:textSize="16sp"
                android:drawableLeft="@drawable/ic_refund"
                android:drawableTint="@color/blue"
                android:drawablePadding="10dp"
                android:textColor="@color/grey_text_color"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_below="@+id/llShop"
            android:padding="12dp"
            android:text="@string/shareWhatsapp"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:background="@drawable/bg_round"
            android:drawableLeft="@drawable/ic_whatsapp"
            android:drawablePadding="16dp"/>

    </LinearLayout>


</RelativeLayout>