<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="8dp"
        android:background="@drawable/bg_curve">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_shop"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="4dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_shops" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="6dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/shop_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/cat_name"
                        android:textSize="15sp"
                        android:drawablePadding="10dp"
                        android:drawableLeft="@drawable/ic_list"
                        android:textColor="@color/grey_text_color" />


                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/kms"
                    android:textSize="15sp"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@drawable/ic_distance"
                    android:textColor="@color/grey_text_color" />

                <TextView
                    android:id="@+id/tv_cashback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cashback"
                    android:textSize="15sp"
                    android:drawablePadding="10dp"
                    android:textColor="@color/grey_text_color"
                    android:drawableLeft="@drawable/ic_refund" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>